apps/cv-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-web
  namespace: cv-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: cv-web
  template:
    metadata:
      labels:
        app: cv-web
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: cv-web
          image: ghcr.io/jvz-devx/cv-web:main-3-bbe7dde777f1e93fd1cbe36fce7b697897a15fce # {"$imagepolicy": "flux-system:cv-web"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
