apps/cv-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cv-web
  namespace: cv-web
spec:
  selector:
    app: cv-web
  ports:
    - port: 80
      targetPort: 3000
